# shunyata-server

./: .env.example  CLAUDE.md  README.md  manage.py  pyproject.toml
.github/workflows/: docker-publish.yml
meditation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
meditation/migrations/: 0001_initial.py  0003_meditationsession_compeleted.py  0004_rename_compeleted_meditationsession_completed.py
meditation/models/: __init__.py  email_verification.py  session.py
meditation/static/meditation/css/: auth.css  timer.css
meditation/static/meditation/js/: login.js  timer.js
meditation/templates/meditation/: base_app.html  login.html  timer.html
meditation/tests/: test_models.py  test_serializers.py  test_views.py
meditation/views/: __init__.py  auth.py  pages.py  sessions.py
shunyata_server/: asgi.py  settings.py  urls.py  wsgi.py
