[project]
name = "shunyata-server"
version = "0.1.0"
description = "Backend server for Shunyata meditation app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.0",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
]
